--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -101,22 +101,22 @@
     {
       "BuildDate": null,
       "Id": "Akka",
-      "Version": "1.1.1.248-beta"
+      "Version": "1.1.2.250-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Cluster",
-      "Version": "1.1.1.248-beta"
+      "Version": "1.1.2.250-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Cluster.Sharding",
-      "Version": "1.1.1.248-beta"
+      "Version": "1.1.2.250-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Cluster.Tools",
-      "Version": "1.1.1.248-beta"
+      "Version": "1.1.2.250-beta"
     },
     {
       "BuildDate": null,
@@ -126,27 +126,27 @@
     {
       "BuildDate": null,
       "Id": "Akka.DI.Core",
-      "Version": "1.1.1.248-beta"
+      "Version": "1.1.2.250-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Logger.Serilog",
-      "Version": "1.0.8.8-beta"
+      "Version": "1.1.1.9-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Persistence",
-      "Version": "1.1.1.248-beta"
+      "Version": "1.1.2.250-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Remote",
-      "Version": "1.1.1.248-beta"
+      "Version": "1.1.2.250-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Serialization.Wire",
-      "Version": "1.1.1.248-beta"
+      "Version": "1.1.2.250-beta"
     },
     {
       "BuildDate": null,
@@ -186,7 +186,7 @@
     {
       "BuildDate": null,
       "Id": "Helios",
-      "Version": "2.1.2"
+      "Version": "2.1.2.1-beta"
     },
     {
       "BuildDate": null,
@@ -311,7 +311,7 @@
     {
       "BuildDate": null,
       "Id": "Serilog",
-      "Version": "2.0.0"
+      "Version": "2.1.0-dev-00670"
     },
     {
       "BuildDate": null,
@@ -396,7 +396,7 @@
   ],
   "PackageSources": [
     "/opt/packageCache",
-    "http://192.168.99.100:81/"
+    "http://nuget/"
   ],
   "Seeds": [
     "akka.tcp://ClusterKit@seed:3090"
