--- a/Docker/ClusterKitPostgres/Dockerfile
+++ b/Docker/ClusterKitPostgres/Dockerfile
@@ -1,6 +1,7 @@
-FROM postgres:9.5.2
+FROM postgres:9.5.3
 MAINTAINER Mikhail Kantarovskiy <kantoramob@gmail.com>
-RUN apt-get update && \
+RUN export DEBIAN_FRONTEND=noninteractive && \
+	apt-get update && \
 	apt-get -y upgrade
-
+RUN echo listen_addresses = '*' >> /var/lib/postgresql/data/postgresql.conf
 
