--- a/nuget.config
+++ b/nuget.config
@@ -7,6 +7,6 @@
     <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
     <add key="local" value="./packageOut" />
     <add key="Akka" value="https://www.myget.org/F/akkadotnet/api/v2" />
-
+    <add key="Mods" value="./packagesMod" />
   </packageSources>
 </configuration>
