--- a/ClusterKit.Core/ClusterKit.Build/packages.config
+++ b/ClusterKit.Core/ClusterKit.Build/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="FAKE" version="4.30.0" targetFramework="net45" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net45" />
-  <package id="Serilog" version="2.0.0" targetFramework="net45" />
+  <package id="Serilog" version="2.1.0-dev-00670" targetFramework="net45" />
 </packages>
