--- a/ClusterKit.Monitoring/ClusterKit.Monitoring/packages.config
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.1.1.248-beta" targetFramework="net45" />
-  <package id="Akka.Cluster" version="1.1.1.248-beta" targetFramework="net45" />
-  <package id="Akka.Cluster.Tools" version="1.1.1.248-beta" targetFramework="net45" />
+  <package id="Akka" version="1.1.2.250-beta" targetFramework="net45" />
+  <package id="Akka.Cluster" version="1.1.2.250-beta" targetFramework="net45" />
+  <package id="Akka.Cluster.Tools" version="1.1.2.250-beta" targetFramework="net45" />
   <package id="Akka.DI.CastleWindsor" version="1.0.8.191-beta" targetFramework="net45" />
-  <package id="Akka.DI.Core" version="1.1.1.248-beta" targetFramework="net45" />
-  <package id="Akka.Logger.Serilog" version="1.0.8.8-beta" targetFramework="net45" />
-  <package id="Akka.Remote" version="1.1.1.248-beta" targetFramework="net45" />
+  <package id="Akka.DI.Core" version="1.1.2.250-beta" targetFramework="net45" />
+  <package id="Akka.Logger.Serilog" version="1.1.1.9-beta" targetFramework="net45" />
+  <package id="Akka.Remote" version="1.1.2.250-beta" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
@@ -15,7 +15,7 @@
   <package id="ClusterKit.Web.SignalR" version="0.0.0-local" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
-  <package id="Helios" version="2.1.2" targetFramework="net45" />
+  <package id="Helios" version="2.1.2.1-beta" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
@@ -37,7 +37,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="Serilog" version="2.0.0" targetFramework="net45" />
+  <package id="Serilog" version="2.1.0-dev-00670" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
