--- a/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.1.1.248-beta" targetFramework="net45" />
-  <package id="Akka.Cluster" version="1.1.1.248-beta" targetFramework="net45" />
-  <package id="Akka.Cluster.Tools" version="1.1.1.248-beta" targetFramework="net45" />
+  <package id="Akka" version="1.1.2.250-beta" targetFramework="net45" />
+  <package id="Akka.Cluster" version="1.1.2.250-beta" targetFramework="net45" />
+  <package id="Akka.Cluster.Tools" version="1.1.2.250-beta" targetFramework="net45" />
   <package id="Akka.DI.CastleWindsor" version="1.0.8.191-beta" targetFramework="net45" />
-  <package id="Akka.DI.Core" version="1.1.1.248-beta" targetFramework="net45" />
-  <package id="Akka.DI.TestKit" version="1.1.1.248-beta" targetFramework="net45" />
-  <package id="Akka.Logger.Serilog" version="1.0.8.8-beta" targetFramework="net45" />
-  <package id="Akka.Remote" version="1.1.1.248-beta" targetFramework="net45" />
-  <package id="Akka.Serialization.Wire" version="1.1.1.248-beta" targetFramework="net45" />
-  <package id="Akka.TestKit" version="1.1.1.248-beta" targetFramework="net45" />
-  <package id="Akka.TestKit.Xunit2" version="1.1.1.248-beta" targetFramework="net45" />
+  <package id="Akka.DI.Core" version="1.1.2.250-beta" targetFramework="net45" />
+  <package id="Akka.DI.TestKit" version="1.1.2.250-beta" targetFramework="net45" />
+  <package id="Akka.Logger.Serilog" version="1.1.1.9-beta" targetFramework="net45" />
+  <package id="Akka.Remote" version="1.1.2.250-beta" targetFramework="net45" />
+  <package id="Akka.Serialization.Wire" version="1.1.2.250-beta" targetFramework="net45" />
+  <package id="Akka.TestKit" version="1.1.2.250-beta" targetFramework="net45" />
+  <package id="Akka.TestKit.Xunit2" version="1.1.2.250-beta" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
@@ -18,7 +18,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
-  <package id="Helios" version="2.1.2" targetFramework="net45" />
+  <package id="Helios" version="2.1.2.1-beta" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
@@ -26,7 +26,7 @@
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="Serilog" version="2.0.0" targetFramework="net45" />
+  <package id="Serilog" version="2.1.0-dev-00670" targetFramework="net45" />
   <package id="Serilog.Sinks.TextWriter" version="2.0.0" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
