--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,7 @@ publish/
 
 # NuGet Packages
 *.nupkg
+!packagesMod/*.nupkg
 # The packages folder can be ignored because of Package Restore
 **/packages/*
 # except build/, which is used as an MSBuild target.
