--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.FallbackPackageDependencyFixer/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.FallbackPackageDependencyFixer/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
-  <package id="NuGet.Core" version="2.11.1" targetFramework="net45" />
+  <package id="NuGet.Core" version="2.12.0-rtm-815" targetFramework="net45" />
 </packages>
