--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
@@ -42,7 +42,7 @@
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Npgsql" version="3.0.7" targetFramework="net45" />
-  <package id="NuGet.Core" version="2.11.1" targetFramework="net45" />
+  <package id="NuGet.Core" version="2.12.0-rtm-815" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Serilog" version="2.1.0-dev-00670" targetFramework="net45" />
   <package id="Serilog.Sinks.TextWriter" version="2.0.0" targetFramework="net45" />
