--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -301,7 +301,7 @@
     {
       "BuildDate": null,
       "Id": "NuGet.Core",
-      "Version": "2.11.1"
+      "Version": "2.12.0-rtm-815"
     },
     {
       "BuildDate": null,
