--- a/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
+++ b/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
@@ -150,6 +150,7 @@
     <Compile Include="ConfigurationUtils.cs" />
     <Compile Include="EnActorType.cs" />
     <Compile Include="IMessageRouter.cs" />
+    <Compile Include="ILoggerConfigurator.cs" />
     <Compile Include="MessageRouter.cs" />
     <Compile Include="Monads\Maybe.cs" />
     <Compile Include="NameSpaceActor.cs" />
