--- a/Docker/ClusterKitService/docker-compose.yml
+++ b/Docker/ClusterKitService/docker-compose.yml
@@ -1,11 +1,26 @@
 version: '2'
 networks:
   default:
-    driver_opts:
-      com.docker.network.enable_ipv6: "false"  
+    ipam:
+      config:
+       - subnet: 172.18.0.0/24
+         ip_range: 172.18.0.0/24
+         gateway: 172.18.0.1 
 
 services:
   #set of abstract utility servers
+  vpn:
+    image: clusterkit/vpn
+    networks:
+      default:
+        ipv4_address: 172.18.0.253
+    privileged: true
+    ports:
+     - "1194:1194"
+    environment:
+     - DEBUG=1
+
+
   nuget:
     #image: sunside/simple-nuget-server
     image: clusterkit/nuget
@@ -13,8 +28,15 @@ services:
      - "81:80"
     environment:
      - NUGET_API_KEY=ClusterKit
+    networks:
+      default:
+        ipv4_address: 172.18.0.2 
+
   configDb:
     image: clusterkit/postgres
+    networks:
+      default:
+        ipv4_address: 172.18.0.3     
   entry:
     image: clusterkit/entry
     links:
@@ -23,6 +45,9 @@ services:
      - "publisher2"
     ports:
      - "80:80"
+    networks:
+      default:
+        ipv4_address: 172.18.0.5     
 
   #Cluster servers
   seed: #seeds should be limited and with fixed addresses preknown to other cluster nodes
@@ -34,6 +59,9 @@ services:
         driver: json-file
         options:
             max-size: "1m"
+    networks:
+      default:
+        ipv4_address: 172.18.0.6               
 
   publisher1: #seeds should be limited and with fixed addresses preknown to other cluster nodes
     image: clusterkit/publisher
@@ -44,6 +72,9 @@ services:
         driver: json-file
         options:
             max-size: "1m"
+    networks:
+      default:
+        ipv4_address: 172.18.0.7               
 
 
   publisher2: #seeds should be limited and with fixed addresses preknown to other cluster nodes
@@ -54,6 +85,9 @@ services:
         driver: json-file
         options:
             max-size: "1m"
+    networks:
+      default:
+        ipv4_address: 172.18.0.8             
 
   manager:
     image: clusterkit/manager
@@ -74,6 +108,20 @@ services:
         driver: json-file
         options:
             max-size: "1m"
+    networks:
+      default:
+        ipv4_address: 172.18.0.9 
+  
+  elk:
+    image: clusterkit/elk
+    logging:
+        driver: json-file
+        options:
+            max-size: "1m"
+    networks:
+      default:
+        ipv4_address: 172.18.0.12         
+
   worker:
     image: clusterkit/worker
     links:
