--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ bld/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
-[Bb]uild[Ll]og.*
+#[Bb]uild[Ll]og.*
 
 # NUNIT
 *.VisualState.xml
@@ -61,7 +61,7 @@ artifacts/
 *.tlh
 *.tmp
 *.tmp_proj
-*.log
+*.log$
 *.vspscc
 *.vssscc
 .builds
