--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/packages.config
@@ -14,6 +14,7 @@
   <package id="ClusterKit.Core.Data" version="0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.EF" version="0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.Rest" version="0.0.0-local" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework6.Npgsql" version="3.0.7" targetFramework="net45" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
