--- a/ClusterKit.Core/ClusterKit.Core.Rest/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.Rest/packages.config
@@ -7,6 +7,7 @@
   <package id="Akka.Persistence" version="1.1.2.258-beta" targetFramework="net45" />
   <package id="Akka.Remote" version="1.1.2.258-beta" targetFramework="net45" />
   <package id="Akka.Serialization.Wire" version="1.1.2.258-beta" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net45" />
   <package id="Helios" version="2.1.3" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
