--- a/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
@@ -20,6 +20,7 @@
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
   <package id="Helios" version="2.1.3" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net46" />
@@ -38,11 +39,11 @@
   <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
   <package id="System.Threading" version="4.0.0" targetFramework="net45" />
   <package id="Wire" version="0.7.1" targetFramework="net45" />
-  <package id="xunit" version="2.2.0-beta1-build3239" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.assert" version="2.2.0-beta1-build3239" targetFramework="net45" />
-  <package id="xunit.core" version="2.2.0-beta1-build3239" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.2.0-beta1-build3239" targetFramework="net45" />
-  <package id="xunit.extensibility.execution" version="2.2.0-beta1-build3239" targetFramework="net45" />
-  <package id="xunit.runner.console" version="2.2.0-beta1-build3239" targetFramework="net45" developmentDependency="true" />
+  <package id="xunit" version="2.2.0-beta2-build3300" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net45" />
+  <package id="xunit.assert" version="2.2.0-beta2-build3300" targetFramework="net45" />
+  <package id="xunit.core" version="2.2.0-beta2-build3300" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.2.0-beta2-build3300" targetFramework="net45" />
+  <package id="xunit.extensibility.execution" version="2.2.0-beta2-build3300" targetFramework="net45" />
+  <package id="xunit.runner.console" version="2.2.0-beta2-build3300" targetFramework="net45" developmentDependency="true" />
 </packages>
