--- a/Docker/ClusterKitMonitoring/web/app/.nginx.conf
+++ b/Docker/ClusterKitMonitoring/web/app/.nginx.conf
@@ -6,43 +6,41 @@
 
 ##
 # Redirect to the same URL with https://
-##
+
 
 server {
-
   listen 80;
-
-# Type your domain name below
-  server_name example.com;
-
-  return 301 https://$server_name$request_uri;
-
+  location /clusterkit {
+   # Set path
+    root /var/www;
+    try_files $uri /clusterkit/index.html;
+  }
 }
 
 ##
 # HTTPS configurations
 ##
 
-server {
+#server {
 
-  listen 443;
+ # listen 443;
 
 # Type your domain name below
-  server_name example.com;
+#  server_name example.com;
 
-  ssl on;
-  ssl_certificate     /path/to/certificate.crt;
-  ssl_certificate_key /path/to/server.key;
+#  ssl on;
+#  ssl_certificate     /path/to/certificate.crt;
+#  ssl_certificate_key /path/to/server.key;
 
 # Use only TSL protocols for more secure
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+#  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
 # Always serve index.html for any request
-  location / {
+#  location / {
     # Set path
-    root /var/www/;
-    try_files $uri /index.html;
-  }
+#    root /var/www/;
+#    try_files $uri /index.html;
+#  }
 
 ##
 # If you want to use Node/Rails/etc. API server
@@ -63,4 +61,4 @@ server {
 #
 # }
 
-}
+#}
