--- a/Docker/ClusterKitMonitoring/web/package.json
+++ b/Docker/ClusterKitMonitoring/web/package.json
@@ -109,7 +109,10 @@
         }
       ],
       "indentation": 2
-    }
+    },
+    "ignoreFiles": [
+      "./app/ThirdParty/**"
+    ]
   },
   "dllPlugin": {
     "path": "node_modules/react-boilerplate-dlls",
@@ -137,7 +140,6 @@
     "d3": "^4.2.1",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.1",
-    "google-map-react": "^0.16.3",
     "history": "3.0.0",
     "http-proxy-middleware": "^0.17.0",
     "immutable": "3.8.1",
@@ -183,6 +185,7 @@
     "chai": "3.5.0",
     "chai-enzyme": "0.5.0",
     "cheerio": "0.20.0",
+    "copy-webpack-plugin": "^3.0.1",
     "coveralls": "2.11.9",
     "cross-env": "1.0.8",
     "css-loader": "0.23.1",
