--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -135,6 +135,16 @@
     },
     {
       "BuildDate": null,
+      "Id": "ClusterKit.LargeObjects",
+      "Version": "0.0.0-local"
+    },
+    {
+      "BuildDate": null,
+      "Id": "ClusterKit.LargeObjects.Client",
+      "Version": "0.0.0-local"
+    },
+    {
+      "BuildDate": null,
       "Id": "ClusterKit.NodeManager.ConfigurationSource",
       "Version": "0.0.0-local"
     },
@@ -161,11 +171,6 @@
     {
       "BuildDate": null,
       "Id": "ClusterKit.Web.Descriptor",
-      "Version": "0.0.0-local"
-    },
-    {
-      "BuildDate": null,
-      "Id": "ClusterKit.Web.SignalR",
       "Version": "0.0.0-local"
     },
     {
