--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Client/packages.config
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Client/packages.config
@@ -10,9 +10,8 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
-  <package id="ClusterKit.Web" version="0.0.0-local" targetFramework="net45" />
-  <package id="ClusterKit.Web.Client" version="0.0.0-local" targetFramework="net45" />
-  <package id="ClusterKit.Web.SignalR" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects" version="0.0.0-local" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
   <package id="Helios" version="2.1.3" targetFramework="net45" />
